--- a/9.1/public/index.html
+++ b/9.1/public/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>All Tasks</title>
+    <title>Task 9.1</title>
+    <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
-    <a target="_blank" href="#">DZ#10</a>
-    <a target="_blank" href="#">DZ#9</a>
-    <a target="_blank" href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/8.1">DZ#8</a>
+    <script type="module" src="../src/modules/main.js"></script>
   </body>
 </html>
