--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <a target="_blank" href="#">DZ#10</a>
+    <a target="_blank" href="#">DZ#9</a>
     <a target="_blank" href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/8.1">DZ#8</a>
   </body>
 </html>
