--- a/11.1/public/index.html
+++ b/11.1/public/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
-      <p></p>
-      <h3>Click this button to verify your password!</h3>
-      <p></p>
-      <button class='button'>CHECK YOUR PASSWORD</button>
+    <p></p>
+    <h3>Click this button to verify your password!</h3>
+    <p></p>
+    <button class="button">CHECK YOUR PASSWORD</button>
     <script type="module" src="../src/modules/main.js"></script>
   </body>
 </html>
