--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,26 @@
     <title>All Tasks</title>
   </head>
   <body>
-    <a target="_blank" href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/11.1">DZ#11.1</a>
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/11.1"
+      >DZ#11.1</a
+    >
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/10.3"
+      >DZ#10.3</a
+    >
     <a target="_blank" href="#">DZ#10.1</a>
-    <a target="_blank" href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/9.1">DZ#9.1</a>
-    <a target="_blank" href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/8.1">DZ#8.1</a>
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/9.1"
+      >DZ#9.1</a
+    >
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/8.1"
+      >DZ#8.1</a
+    >
   </body>
 </html>
