update index.html of all task with link to 10.1

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,11 @@
       href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/10.3"
       >DZ#10.3</a
     >
-    <a target="_blank" href="#">DZ#10.1</a>
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/10.1"
+      >DZ#10.1</a
+    >
     <a
       target="_blank"
       href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/9.1"
