initial commit 12.1; update index.html (all tasks)

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <title>All Tasks</title>
   </head>
   <body>
+    <a target="_blank" href="#">DZ#12.2</a>
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/12.1"
+      >DZ#12.1</a
+    >
     <a
       target="_blank"
       href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/11.1"
