--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <title>All Tasks</title>
   </head>
   <body>
-    <a target="_blank" href="#">DZ#12.2</a>
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/12.2"
+      >DZ#12.2</a
+    >
     <a
       target="_blank"
       href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/12.1"
