--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
   <body>
     <a
       target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/13.1"
+      >DZ#13.1</a
+    >
+    <a
+      target="_blank"
       href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/12.2"
       >DZ#12.2</a
     >
