initial commit of tasks 14.1, 14.2, 15.1, 15.2

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,26 @@
   <body>
     <a
       target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/15.2"
+      >DZ#15.2</a
+    >
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/15.1"
+      >DZ#15.1</a
+    >
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/14.2"
+      >DZ#14.2</a
+    >
+    <a
+      target="_blank"
+      href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/14.1"
+      >DZ#14.1</a
+    >
+    <a
+      target="_blank"
       href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/13.1"
       >DZ#13.1</a
     >
