--- a/public/index.html
+++ b/public/index.html
@@ -67,5 +67,22 @@
       href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/8.1"
       >DZ#8.1</a
     >
+    <a target="_blank" href="https://codepen.io/Olshta/pen/yWvwrj">DZ#7.2</a>
+    <a target="_blank" href="https://codepen.io/Olshta/pen/NVymWw">DZ#7.1</a>
+    <a target="_blank" href="https://codepen.io/Olshta/pen/Xweeqx">DZ#6.3</a>
+    <a target="_blank" href="https://codepen.io/Olshta/pen/QRMdYe"
+      >DZ#4.2, 5.1, 5.2, 6.1, 6.2</a
+    >
+    <a target="_blank" href="https://codepen.io/Olshta/pen/WBRwZq"
+      >DZ#3.2, 4.1</a
+    >
+    <a target="_blank" href="https://codepen.io/Olshta/pen/MdyxZM"
+      >DZ#3.4, 3.5</a
+    >
+    <a target="_blank" href="https://codepen.io/Olshta/pen/xNVmWX">DZ#3.1</a>
+    <a target="_blank" href="https://codepen.io/Olshta/pen/ZNzKRL"
+      >DZ#2.1-2.5, 3.3</a
+    >
+    <a target="_blank" href="https://codepen.io/Olshta/pen/rgBmJy">DZ#1.1</a>
   </body>
 </html>
