initial commit 17, update  index.html of all task

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,27 @@
     <p>
       <a
         target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/17.2"
+        >DZ#17.2</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/17.1"
+        >DZ#17.1</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/16.1"
+        >DZ#16.1</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
         href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/15.2"
         >DZ#15.2</a
       >
