--- a/1.1/public/index.html
+++ b/1.1/public/index.html
@@ -19,9 +19,11 @@
       <input placeholder="Input the second number" type="text" id="inp2" />
       <p></p>
       <br />
-      <button onclick="plus()">COUNT!</button>
+      <button class="btn">COUNT!</button>
       <p></p>
     </form>
     <script type="module" src="../src/modules/main.js"></script>
   </body>
 </html>
+
+<!-- onclick="plus()" -->
