--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
     <p>
       <a
         target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/18.1"
+        >DZ#18.1</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
         href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/17.2"
         >DZ#17.2</a
       >
