update with public format 18.1

--- a/18.1/public/index.html
+++ b/18.1/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico" />
-    <title>vRUSLO</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Task 18.1</title>
+    <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
   <header class="header">
@@ -88,7 +88,7 @@
               </div>
             </div>
           </section>
-          <script src="main.js"></script>
+          <script type="module" src="../src/modules/main.js"></script>
           <p></p>
           <footer class="footer">
             <div>
