--- a/18.1/public/index.html
+++ b/18.1/public/index.html
@@ -25,57 +25,57 @@
       <div class="carousel">
         <div class="slide">
             <div class="item card">
-            <img src="ABC.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/ABC.png">
             <h2>Abeceda / Алфавит</h2>
             </div>
             <div class="item card">
-            <img src="Numbers.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Numbers.png">
             <h2>Števila / Числа</h2>
             </div>
             <div class="item card">
-            <img src="Colours.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Colours.png">
             <h2>Barve / Цвета</h2>
             </div>          
         </div>
         <div class="slide">
             <div class="item card">
-            <img src="Family.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Family.png">
             <h2>Družina / Cемья</h2>  
           </div>
             <div class="item card">
-            <img src="Fruits.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Fruits.png">
             <h2>Sadje / Фрукты</h2>
             </div>
             <div class="item card">
-             <img src="Animals.png">
+             <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Animals.png">
             <h2>Živali / Животные</h2>
             </div>
         </div>
         <div class="slide">
             <div class="item card">
-            <img src="Jobs.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Jobs.png">
             <h2>Poklici / Профессии</h2>
             </div>
             <div class="item card">
-            <img src="Activities.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Activities.png">
             <h2>Dejanja / Активности</h2>
             </div>
             <div class="item card">
-            <img src="Body.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Body.png">
             <h2>Človeško telo / Тело человека</h2>
             </div>
         </div>
         <div class="slide">
             <div class="item card">
-            <img src="Time.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Time.png">
             <h2>Čas/ Время</h2>
             </div>
             <div class="item card">
-            <img src="Vegetables.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Vegetables.png">
             <h2>Zelenjava / Овощи</h2>
             </div>
             <div class="item card">
-            <img src="Greetings.png">
+            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Greetings.png">
             <h2>Pozdravi / Приветствие</h2>
             </div>
         </div>
