--- a/18.2/public/index.html
+++ b/18.2/public/index.html
@@ -26,61 +26,61 @@
         <div id="arrow-left" class="chevron" onclick="switchSlidesByChevrons(-1)"></div>
       <div class="carousel">
         <div class="slide">
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/ABC.png">
-            <h2>Abeceda / Алфавит</h2>
-            </div>
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Numbers.png">
-            <h2>Števila / Числа</h2>
-            </div>
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Colours.png">
-            <h2>Barve / Цвета</h2>
-            </div>          
-        </div>
-        <div class="slide">
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Family.png">
-            <h2>Družina / Cемья</h2>  
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/ABC.png">
+          <h2>Abeceda / Алфавит</h2>
           </div>
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Fruits.png">
-            <h2>Sadje / Фрукты</h2>
-            </div>
-            <div class="item card">
-             <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Animals.png">
-            <h2>Živali / Животные</h2>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Jobs.png">
-            <h2>Poklici / Профессии</h2>
-            </div>
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Activities.png">
-            <h2>Dejanja / Активности</h2>
-            </div>
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Body.png">
-            <h2>Človeško telo / Тело человека</h2>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Time.png">
-            <h2>Čas/ Время</h2>
-            </div>
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Vegetables.png">
-            <h2>Zelenjava / Овощи</h2>
-            </div>
-            <div class="item card">
-            <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Greetings.png">
-            <h2>Pozdravi / Приветствие</h2>
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Numbers.png">
+          <h2>Števila / Числа</h2>
           </div>
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Colours.png">
+          <h2>Barve / Цвета</h2>
+          </div>          
+      </div>
+      <div class="slide">
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Family.png">
+          <h2>Družina / Cемья</h2>  
         </div>
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Fruits.png">
+          <h2>Sadje / Фрукты</h2>
+          </div>
+          <div class="item card">
+           <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Animals.png">
+          <h2>Živali / Животные</h2>
+          </div>
+      </div>
+      <div class="slide">
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Jobs.png">
+          <h2>Poklici / Профессии</h2>
+          </div>
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Activities.png">
+          <h2>Dejanja / Активности</h2>
+          </div>
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Body.png">
+          <h2>Človeško telo / Тело человека</h2>
+          </div>
+      </div>
+      <div class="slide">
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Time.png">
+          <h2>Čas/ Время</h2>
+          </div>
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Vegetables.png">
+          <h2>Zelenjava / Овощи</h2>
+          </div>
+          <div class="item card">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Greetings.png">
+          <h2>Pozdravi / Приветствие</h2>
+        </div>
+      </div>
      </div>
      <div id="arrow-right" class="chevron" onclick="switchSlidesByChevrons(1)"></div>
     </div>
@@ -89,7 +89,7 @@
               <div class="row">
                 <div class="sources">
                   <h4>
-                    Učimo se rusčino in slovensčino / Изучаем русский и словенский языки
+                    Učimo se rusčino in slovenščino / Изучаем русский и словенский языки
                   </h4>
         
                   <a
