rename chevron to arrow in 18.2 (all files)

--- a/18.2/public/index.html
+++ b/18.2/public/index.html
@@ -23,7 +23,7 @@
       </div>
       <section id="topicSection">
         <div id="carousel-area">
-        <div id="arrow-left" class="chevron" onclick="switchSlidesByChevrons(-1)"></div>
+        <div id="arrow-left" class="arrows"></div>
       <div class="carousel">
         <div class="slide">
           <div class="item card">
@@ -77,12 +77,12 @@
           <h2>Zelenjava / Овощи</h2>
           </div>
           <div class="item card">
-          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.2/public/Greetings.png">
+          <img src="https://raw.githubusercontent.com/OlgaShtante/DZ_tasks/master/18.1/public/Greetings.png">
           <h2>Pozdravi / Приветствие</h2>
         </div>
       </div>
      </div>
-     <div id="arrow-right" class="chevron" onclick="switchSlidesByChevrons(1)"></div>
+     <div id="arrow-right" class="arrows"></div>
     </div>
     </section>
             <section id="moreSources">
