initial commit of 19.1,update all tasks html doc

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
     <p>
       <a
         target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/19.1"
+        >DZ#19.1</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
         href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/18.2"
         >DZ#18.2</a
       >
