--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <title>All Tasks</title>
   </head>
   <body>
+      <p>
+      <a
+        target="_blank"
+        href="https://docs.google.com/spreadsheets/d/19yW_F8qeg7mHGCU8L6i3siPyY4930gResmj0OxfKr_M/edit#gid=1539749114"
+        >DZ#19.3</a
+      >
+    </p>
     <p>
       <a
         target="_blank"
