update index.html of all tasks with links 19.3&20

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,24 @@
     <title>All Tasks</title>
   </head>
   <body>
-      <p>
+    <p>
       <a
         target="_blank"
-        href="https://docs.google.com/spreadsheets/d/19yW_F8qeg7mHGCU8L6i3siPyY4930gResmj0OxfKr_M/edit#gid=1539749114"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/20.2"
+        >DZ#20.2</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/20.1"
+        >DZ#20.1</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/19.3"
         >DZ#19.3</a
       >
     </p>
