--- a/20.2/public/index.html
+++ b/20.2/public/index.html
@@ -24,7 +24,7 @@
         <a
           class="link"
           target="_blank"
-          href="https://docs.google.com/spreadsheets/d/19yW_F8qeg7mHGCU8L6i3siPyY4930gResmj0OxfKr_M/edit#gid=1539749114"
+          href="https://docs.google.com/spreadsheets/d/1_c7d2Kyzqh-dDYd3MAbGEa9C1iU38EMJX7oL23KwOj8/edit?ts=5cead56b#gid=1120461008"
           >link</a
         >
       </div>
