--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,20 @@
     <p>
       <a
         target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/21.2"
+        >DZ#21.2</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/21.1"
+        >DZ#21.1</a
+      >
+    </p>
+    <p>
+      <a
+        target="_blank"
         href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/20.2"
         >DZ#20.2</a
       >
