update index.html of all tasks

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,20 @@
     <title>All Tasks</title>
   </head>
   <body>
+      <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/22.2"
+          >DZ#22.2</a
+        >
+      </p>
     <p>
+        <a
+        target="_blank"
+        href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/22.1"
+        >DZ#22.1</a
+      >
+    </p>
       <a
         target="_blank"
         href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/21.2"
