initial commit 22+, update index.html of all tasks

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <title>All Tasks</title>
   </head>
   <body>
+  <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/22+"
+          >DZ#22+</a
+        >
+      </p>
       <p>
           <a
           target="_blank"
