initial commit 23.1 and update index.html of allTasks

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,20 @@
     <title>All Tasks</title>
   </head>
   <body>
+      <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/23.2"
+          >DZ#23.2</a
+        >
+      </p>
+      <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/23.1"
+          >DZ#23.1</a
+        >
+      </p>
   <p>
           <a
           target="_blank"
