update index.html of all tasks with 24.1,24.2,24.3

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,27 @@
       <p>
           <a
           target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/24.3"
+          >DZ#24.3</a
+        >
+      </p>
+      <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/24.2"
+          >DZ#24.2</a
+        >
+      </p>
+      <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/24.1"
+          >DZ#24.1</a
+        >
+      </p>
+      <p>
+          <a
+          target="_blank"
           href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/23.2"
           >DZ#23.2</a
         >
