update index.html of all tasks with links to  25

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,27 @@
       <p>
           <a
           target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/25.3"
+          >DZ#25.3</a
+        >
+      </p>
+      <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/25.2"
+          >DZ#25.2</a
+        >
+      </p>
+      <p>
+          <a
+          target="_blank"
+          href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/25.1"
+          >DZ#25.1</a
+        >
+      </p>
+      <p>
+          <a
+          target="_blank"
           href="https://stackblitz.com/github/OlgaShtante/DZ_tasks/tree/master/24.3"
           >DZ#24.3</a
         >
