update URL to the JSON server in 25.1

--- a/25.1/public/index.html
+++ b/25.1/public/index.html
@@ -9,9 +9,7 @@
     <form>
       <div>
         <span>Custom json server: </span
-        ><a
-          target="_blank"
-          href="https://db-json-to-be-forms.herokuapp.com/posts/"
+        ><a target="_blank" href="https://db-json-to-be-forms.herokuapp.com/"
           >link</a
         >
       </div>
